@@ -17,8 +17,8 @@
             </div>
             <hr style="margin-top: 20px; border-style: solid none none; border-color: #EEE"></hr>
             <div style="font-size: 80%; color: #777">
-                <p i18n:msg="datetime">
-                The password will expire at <time datetime="${record.password_reset_expire.isoformat()}">${expire} UTC</time>.
+                <p i18n:msg="datetime,expire_delay">
+                The password will expire in <time datetime="${record.password_reset_expire.isoformat()}">${format_timedelta(expire_delay)}</time>.
                 </p>
             </div>
         </div>
